# automatic_assignations

./: CMakeLists.txt  README.md  main.cpp
include/: Activity.hpp  Astek.hpp  AstekPercentage.hpp  Availability.hpp  Date.hpp  Planning.hpp  Team.hpp
include/utils/: Types.hpp  console.hpp
src/: Activity.cpp  Astek.cpp  Availability.cpp  Planning.cpp  Team.cpp
